Revised index.html

--- a/index.html
+++ b/index.html
@@ -46,18 +46,49 @@
             <div class="row" style="padding-top: 20px;">
                 <div class="col-xl-3"><img class="rounded-circle img-fluid" src="assets/img/him_nbg.png"></div>
                 <div class="col">
-                    <p>Hi, Welcome!<br>I am a #computer-science #ai enthusiast. My main research interest is in applications of AI in healthcare and biomedicine. Currently, I am working as a senior lecturer at the University of Applied Sciences Krems in Austria. Before that, I was a postdoc at the University of Tromsø in Norway, where I worked with Prof. Dilip Prasad on an ERC project. Before joining UiT, I completed my PhD at IIT Roorkee in India, under the guidance of Prof. Balasubramanian Raman. During my PhD, I studied the recognition and generation problems in human motion. I completed my Master's under the direction of Prof. Gyanendra Verma at NIT Kurukshetra. Before that, I completed my Bachelor's in Computer Science from HBTI Kanpur.</p>
+                    <p>Hi, Welcome!<br>A bit about me, I like #computer-science #ai a lot. My main research interest is in applications of AI in healthcare and biomedicine. Currently, I am working as Assoc Prof (fh) at the university of applied sciences Krems, Austria. Before that, I was a postdoc at the university of Tromsø, Norway, where I worked with Prof Dilip Prasad on ERC FET open EU project. Before joining UiT, I completed my PhD at IIT Roorkee, India, under the guidance of Prof Balasubramanian Raman. During my PhD, I studied the recognition and generation problems in human motion. I completed my Master's under the direction of Prof Gyanendra Verma at NIT Kurukshetra. Before that, I completed my Bachelor's in Computer Science from HBTI Kanpur.</p>
+                </div>
+            </div>
+
+            <div class="row" style="padding-top: 20px;">
+                <div class="col">
+                    <h5>Research Focus</h5>
+                    <p>My core research applies deep learning techniques to biomedical AI and healthcare challenges. I currently focus on self-supervised learning, generative AI, and explainable/responsible AI to build robust systems.</p>
+                    <p>Broad areas of interest include:</p>
+                    <ul>
+                        <li>Computer vision, image/video processing, motion analysis</li>
+                        <li>Self-supervised and unsupervised learning</li>
+                        <li>Explainable and responsible AI for healthcare</li>
+                        <li>Signal processing and multivariate models</li>
+                        <li>Resource efficient architectures</li>
+                    </ul>
                 </div>
             </div>
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
-                    <h5>Research Interests</h5>
-                    <p>My present research revolves around nanoscopy and self-supervised learning. I am interested in applications of machine learning, especially in the healthcare sector. My broad areas of interest are:</p>
+                    <h5>Collaboration & Research Internships</h5>
+                    <p>
+                        I am always open to collaboration on research. If your research overlaps with mine or you just want to have a talk in general, please feel free to send me an email.
+                    </p>
+                    <p>
+                        I also look for motivated students to join our team for <b>research internships</b> on exciting deep learning projects. If you are interested in a research internship, please email me with your CV and a very short statement of interest. Prior knowledge of deep learning concepts and practical experience with frameworks like PyTorch or TensorFlow/Keras is desirable, but a strong desire to learn and contribute is most important.
+                    </p>
+                </div>
+            </div>
+            <div class="row" style="padding-top: 20px;">
+                <div class="col">
+                    <h5>Open Special Issues</h5>
                     <ul>
-                        <li>Healthcare Biomedical Applications</li>
-                        <li>Artificial Intelligence</li>
-                        <li>Cognitive Architectures</li>
+                        <li>
+                            <a href="https://www.mdpi.com/si/mathematics/D81LXYBMQ4" target="_blank"> <b>Mathematics</b> : <i>New Advances in Learning Algorithms and Optimization: Methods and Applications</i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.mdpi.com/journal/algorithms/special_issues/355I15URM9" target="_blank"> <b>Algorithms</b> : <i>Applications of Artificial Intelligence in Healthcare, Biomedicine and Medical Informatics</i></a>
+                        </li>
                     </ul>
+                    <p>
+                        If you are planning a submission, you are welcome to contribute to these issues. Also, if you know someone whose work may be a great fit, please forward this information to them!
+                    </p>
                 </div>
             </div>
             <div class="row" style="padding-top: 20px;">
